--- a/styles/base.css
+++ b/styles/base.css
@@ -1,16 +1,15 @@
-
 body {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: grid;
     max-width: 800px;
     margin: 0 auto;
     padding: 4em;
-    font-size: 18px;
     text-align: center;
     justify-items: center;
 }
 
 header{
-    background: lightblue;
+    background: rgba(50, 53, 117, 0.795);
     width: 100%;
     height: 140px;
     overflow: hidden;
@@ -32,38 +31,33 @@ header h1{
 }
 
 nav{
-    background: black;
+    background: rgb(24, 23, 23);
     width: 100%;
     padding: 4%;
     
 }
 nav a{
     
-    
+    color: rgb(248, 213, 11);
     line-height: 50px;
     display: block;
 }
 h2{
+    
     border-bottom: 1px solid black;
 }
 main {
+    display:grid;
+    gap:30px;
 
     width: 100%;
-    height: 900px;
     overflow: hidden;
-    
-    
   }
   
 section{
     border-style: outset;  
 }
-h3{
-    background: blue;
-    padding: 10%;
-    
-    
-}
+
 ul {
     
     text-align: left;
@@ -72,9 +66,10 @@ ul {
 
 
 footer{
-    background: lightblue;
+    background:rgba(50, 53, 117, 0.795);
     width: 100%;
     height: 140px;
+    margin-top: 50px;
     overflow: hidden;
     padding: 30px;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ;
 }
