--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: grid;
     max-width: 800px;
     margin: 0 auto;
@@ -8,69 +8,76 @@ body {
     justify-items: center;
 }
 
-header{
+header {
     background: rgba(50, 53, 117, 0.795);
     width: 100%;
     height: 140px;
     overflow: hidden;
-    padding: 30px;   
+    padding: 30px;
 
 }
 
 header img {
     width: 130px;
     height: 150px;
-    float:left;
-    padding-left: 150px; 
-     
+    float: left;
+    padding-left: 150px;
+
 }
 
-header h1{
+header h1 {
     padding: 50px;
     padding-right: 150px;
 }
 
-nav{
+nav {
     background: rgb(24, 23, 23);
     width: 100%;
     padding: 4%;
-    
+
 }
-nav a{
-    
+
+nav a {
+
     color: rgb(248, 213, 11);
     line-height: 50px;
     display: block;
 }
-h2{
-    
+
+h2 {
+
     border-bottom: 1px solid black;
 }
-main {
-    display:grid;
-    gap:30px;
 
+main {
+    display: grid;
+    gap: 30px;
     width: 100%;
-    overflow: hidden;
-  }
-  
-section{
-    border-style: outset;  
+
+}
+
+section {
+    border-style: outset;
+}
+
+section h3 {
+    background: burlywood;
+    padding: 5%;
 }
 
 ul {
-    
+
     text-align: left;
     list-style-type: none;
-  }
+}
 
 
-footer{
-    background:rgba(50, 53, 117, 0.795);
+footer {
+    background: rgba(50, 53, 117, 0.795);
     width: 100%;
     height: 140px;
     margin-top: 50px;
     overflow: hidden;
-    padding: 30px;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ;
+    padding: 30px;
+    ;
 }
-  
