--- a/styles/larger.css
+++ b/styles/larger.css
@@ -19,8 +19,8 @@
     }
 
     section{
-        grid-column: 1/3;
-        
-        
+        display: flex;
+        grid-column: 1/2;
+          
     }
   }
