--- a/styles/larger.css
+++ b/styles/larger.css
@@ -20,8 +20,8 @@
         font-size: medium;
     }
 
-    section {
-        grid-column: 1/3;
+    section h3 {
+        grid-column: 2/ span 3;
 
 
     }
